--- a/src/partials/components/componentCreate.hbs
+++ b/src/partials/components/componentCreate.hbs
@@ -41,7 +41,7 @@
             <div class='create-card__counter'>{{channels.length}}</div>
             <img class='create-card__add' src='/icons/plusnew.svg' alt='Add' data-modal-trigger />
           </div>
-          <img class='create-card__add-icon' src='/images/create/graph.png' alt='graph' />
+          <img class='create-card__add-icon' src='/images/create/graph.svg' alt='graph' />
         </div>
         <div class='create-card'>
           <div class='create-card__content' data-channels-content>
@@ -112,7 +112,7 @@
             <div class='create-card__counter'>{{groups.length}}</div>
             <a href="/create-group"><img class='create-card__add' src='/icons/plusnew.svg' alt='Add' /></a>
           </div>
-          <img class='create-card__add-icon' src='/images/create/graph.png' alt='graph' />
+          <img class='create-card__add-icon' src='/images/create/graph.svg' alt='graph' />
         </div>
         <div class='create-card {{#if groupsExpanded}}expanded{{/if}}'>
           <div class="create-card__content" data-groups-content>
@@ -186,7 +186,7 @@
           <div class="modal__header">
         <div class="modal__header-wrapper">
           <h2 class="modal__title">Добавить канал</h2>
-          <img src="/images/create/graph.png" alt="graph"/>
+          <img src="/images/create/graph.svg" alt="graph"/>
           </div>
         <button class="modal__close" data-modal-close>
           <img src="/icons/closemodal.svg" alt="Закрыть">
@@ -281,7 +281,7 @@
           <div class="modal__header-add">
         <div class="modal__header-wrapper-add">
           <h2 class="modal__title">Добавить в группу</h2>
-          <img src="/images/create/graph.png" alt="graph"/>
+          <img src="/images/create/graph.svg" alt="graph"/>
         </div>
         <button class="modal__close" data-modal-close-add-to-group>
           <img src="/icons/close.svg" alt="Закрыть">
