--- a/src/partials/components/componentPreview.hbs
+++ b/src/partials/components/componentPreview.hbs
@@ -1,70 +1,72 @@
-<section class="preview">
-    <div class="preview-wrapper">
-    <div class="preview-post">
-        <div class="preview-post-header">
-            <div class="preview-post-header-wrapper">
-                <div class="preview-post-image">
-                    <img src="/images/preview/channel.png" alt="channel" />
-                </div>
-                <div class="preview-post-title">
-                    <h3 class="preview-post-title-name">My Chanel</h3>
-                    <span class="preview-post-title-username">@mychanel</span>
-                </div>
-            </div>
-            <img class="preview-post-header-graph" src="/images/create/graph.png" alt="graph" />
+<section class='preview'>
+  <div class='preview-wrapper'>
+    <div class='preview-post'>
+      <div class='preview-post-header'>
+        <div class='preview-post-header-wrapper'>
+          <div class='preview-post-image'>
+            <img src='/images/preview/channel.png' alt='channel' />
+          </div>
+          <div class='preview-post-title'>
+            <h3 class='preview-post-title-name'>My Chanel</h3>
+            <span class='preview-post-title-username'>@mychanel</span>
+          </div>
         </div>
-        <div class="preview-post-content">
-            <div class="preview-post-content-wrapper">
-                <div class="preview-post-content-image">
-                    <img class="preview-post-content-image-img" src="/images/preview/post.png" alt="post" />
-                    <p class="preview-post-content-image-text">Привет, друзья! 🎉 Сегодня хотим поделиться с вами новостью! 🥳 Мы рады сообщить о запуске нашего нового продукта 🎉 Это решение, которое изменит вашу жизнь!</p>
-                </div>
-                <div class="preview-post-content-buttons">
-                    <button class="preview-post-content-buttons-button">Читать продолжение</button>
-                    <button class="preview-post-content-buttons-button-link">Перейти</button>
-                    <button class="preview-post-content-buttons-button-link">Ещё ссылка</button>
-                </div>
-            </div>
+        <img class='preview-post-header-graph' src='/images/create/graph.svg' alt='graph' />
+      </div>
+      <div class='preview-post-content'>
+        <div class='preview-post-content-wrapper'>
+          <div class='preview-post-content-image'>
+            <img class='preview-post-content-image-img' src='/images/preview/post.png' alt='post' />
+            <p class='preview-post-content-image-text'>Привет, друзья! 🎉 Сегодня хотим поделиться с
+              вами новостью! 🥳 Мы рады сообщить о запуске нашего нового продукта 🎉 Это решение,
+              которое изменит вашу жизнь!</p>
+          </div>
+          <div class='preview-post-content-buttons'>
+            <button class='preview-post-content-buttons-button'>Читать продолжение</button>
+            <button class='preview-post-content-buttons-button-link'>Перейти</button>
+            <button class='preview-post-content-buttons-button-link'>Ещё ссылка</button>
+          </div>
         </div>
+      </div>
     </div>
 
-    <div class="preview-post-buttons">
-        <div class="preview-post-buttons-item">
-            <h3 class="preview-post-buttons-item-title">Уведомление</h3>
-            <label class="switch">
-                <input type="checkbox">
-                <span class="slider"></span>
-            </label>
+    <div class='preview-post-buttons'>
+      <div class='preview-post-buttons-item'>
+        <h3 class='preview-post-buttons-item-title'>Уведомление</h3>
+        <label class='switch'>
+          <input type='checkbox' />
+          <span class='slider'></span>
+        </label>
+      </div>
+      <div class='preview-post-buttons-item'>
+        <h3 class='preview-post-buttons-item-title'>Закрепить пост</h3>
+        <label class='switch'>
+          <input type='checkbox' />
+          <span class='slider'></span>
+        </label>
+      </div>
+      <div class='preview-post-buttons-item-time'>
+        <h3 class='preview-post-buttons-item-time-title'>Время публикации</h3>
+        <div class='time-input-wrapper'>
+          <div class='time-input-container'>
+            <input type='datetime-local' class='time-input' value='now' />
+            <img src='/icons/clock.svg' alt='calendar' class='time-input-icon' />
+          </div>
+          <button class='time-reset-button'>
+            <img src='/icons/closee.svg' alt='reset' />
+          </button>
         </div>
-        <div class="preview-post-buttons-item">
-            <h3 class="preview-post-buttons-item-title">Закрепить пост</h3>
-            <label class="switch">
-                <input type="checkbox">
-                <span class="slider"></span>
-            </label>
-        </div>
-        <div class="preview-post-buttons-item-time">
-            <h3 class="preview-post-buttons-item-time-title">Время публикации</h3>
-            <div class="time-input-wrapper">
-                <div class="time-input-container">
-                    <input type="datetime-local" class="time-input" value="now">
-                    <img src="/icons/clock.svg" alt="calendar" class="time-input-icon">
-                </div>
-                <button class="time-reset-button">
-                    <img src="/icons/closee.svg" alt="reset">
-                </button>
-            </div>
-        </div>
+      </div>
     </div>
 
-    <button class="preview-post-button">
-        <div class="preview-post-button-icon">
-            <img src='/icons/plus.svg' />
-        </div>
-        <a href="/" class="preview-post-button-text">
-            <span class="preview-post-button-title">Опубликовать</span>
-            <span class="preview-post-button-time">Пост можно изменить в течение ХХ часов</span>
-        </a>
+    <button class='preview-post-button'>
+      <div class='preview-post-button-icon'>
+        <img src='/icons/plus.svg' />
+      </div>
+      <a href='/' class='preview-post-button-text'>
+        <span class='preview-post-button-title'>Опубликовать</span>
+        <span class='preview-post-button-time'>Пост можно изменить в течение ХХ часов</span>
+      </a>
     </button>
-    </div>
+  </div>
 </section>
