--- a/src/css/components/componentCreate.css
+++ b/src/css/components/componentCreate.css
@@ -47,10 +47,10 @@
 }
 
 .create-header__title {
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 24px;
-    letter-spacing: 0px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 24px;
+  letter-spacing: 0px;
 }
 
 .create-search-section {
@@ -68,7 +68,7 @@
 }
 
 .create-card {
-  background: rgba(255, 255, 255, 1);
+  background: var(--background-tertiary);
   position: relative;
   border-radius: 0 16px 16px;
   padding: 16px;
@@ -84,30 +84,30 @@
   padding-top: 10px;
   padding-bottom: 13px;
   border-radius: 16px 0 0 0;
-  background: rgba(255, 255, 255, 1);
+  background: var(--background-tertiary);
 }
 
 .create-card__title {
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 0px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0px;
 }
 
 .create-card__counter {
   color: rgba(169, 169, 169, 1);
-  background-color: rgba(237, 237, 237, 1);
+  background-color: var(--gray-color-background);
   border-radius: 10px;
   padding: 8px;
   padding-block: 4px;
-font-weight: 500;
-font-size: 12px;
-line-height: 18px;
-letter-spacing: 0px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 0px;
 }
 
 .create-card__add {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .create-card__add img {
@@ -120,22 +120,22 @@ letter-spacing: 0px;
 }
 
 .create-card__empty__title {
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 24px;
-    letter-spacing: 0px;
-    text-align: center;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: center;
   margin-bottom: 8px;
-  color: rgba(0, 0, 0, 1);
+  color: var(--text-primary);
 }
 
 .create-card__empty__text {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 18px;
-    letter-spacing: 0px;
-    text-align: center;
-  color: rgba(0, 0, 0, 0.45);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: var(--channel-card);
 }
 
 .modal {
@@ -161,7 +161,7 @@ letter-spacing: 0px;
 
 .modal__content {
   width: 100%;
-  background: #fff;
+  background: var(--background-tertiary);
   border-radius: 0px 16px 16px 16px !important;
   padding: 16px;
   position: relative;
@@ -181,9 +181,9 @@ letter-spacing: 0px;
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
-  letter-spacing: 0px;  
+  letter-spacing: 0px;
   padding: 10px 16px 14px;
-  background: rgba(255, 255, 255, 1);
+  background: var(--background-tertiary);
   border-radius: 16px 0 0 0;
 }
 
@@ -191,9 +191,9 @@ letter-spacing: 0px;
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
-  letter-spacing: 0px;  
+  letter-spacing: 0px;
   padding: 10px 16px;
-  background: rgba(255, 255, 255, 1);
+  background: var(--background-tertiary);
   border-radius: 16px 0 0 0;
 }
 
@@ -242,7 +242,7 @@ letter-spacing: 0px;
   width: 100%;
   padding: 12px;
   padding-right: 40px;
-  border: 1px solid #E5E5E5;
+  border: 1px solid #e5e5e5;
   border-radius: 8px;
   font-size: 16px;
   box-sizing: border-box;
@@ -277,26 +277,26 @@ letter-spacing: 0px;
   border: none;
   font-size: 16px;
   font-weight: 500;
-font-weight: 400;
-font-size: 17px;
-line-height: 26px;
-letter-spacing: 0.1px;
-text-align: center;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 26px;
+  letter-spacing: 0.1px;
+  text-align: center;
 }
 
 .modal__button--cancel {
-  background: #F5F5F5;
+  background: #f5f5f5;
 }
 
 .modal__button--add {
-  background: rgba(15, 15, 15, 1);
+  background: var(--background-secondary);
   box-shadow: 0px 4px 30px 0px rgba(24, 23, 30, 0.3);
-  color: white;
+  color: var(--background-tertiary);
 }
 
 .modal__button--add:disabled {
-  background: #F5F5F5;
-  color: rgba(0, 0, 0, 0.45);
+  background: #f5f5f5;
+  color: var(--channel-card);
   cursor: not-allowed;
   box-shadow: none;
 }
@@ -322,11 +322,10 @@ text-align: center;
   text-align: center;
   color: rgba(133, 111, 255, 1);
   text-decoration: none;
-font-weight: 600;
-font-size: 15px;
-line-height: 24px;
-letter-spacing: 0px;
-
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: 0px;
 }
 
 .channel-card {
@@ -336,12 +335,14 @@ letter-spacing: 0px;
   border: 2px solid transparent;
   border-radius: 16px;
   padding: 16px;
-  background: white;
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  background: var(--background-tertiary);
+  transition:
+    border-color 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 .channel-card:not(.selected) {
-  border-color: rgba(225, 226, 235, 1);
+  border-color: var(--border-color);
 }
 
 .channel-card.selected {
@@ -384,7 +385,7 @@ letter-spacing: 0px;
 .channel-card__username {
   font-size: 13px;
   line-height: 16px;
-  color: rgba(0, 0, 0, 0.45);
+  color: var(--channel-card);
 }
 
 .channel-card__menu {
@@ -398,7 +399,7 @@ letter-spacing: 0px;
   position: absolute;
   margin-top: 40px;
   right: 0;
-  background: white;
+  background: var(--background-tertiary);
   border-radius: 8px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
   display: none;
@@ -419,7 +420,7 @@ letter-spacing: 0px;
 }
 
 .channel-card__dropdown-item--delete {
-  color: #FF3B30;
+  color: #ff3b30;
 }
 
 .create-card__content {
@@ -434,7 +435,6 @@ letter-spacing: 0px;
   overflow-y: hidden;
   padding-bottom: 36px; /* Отступ для кнопки "Показать/Скрыть" */
   box-sizing: border-box;
-
 }
 
 .channel-cards-grid {
@@ -445,19 +445,19 @@ letter-spacing: 0px;
 }
 
 /* По умолчанию показываем только 2 первые карточки */
-.channel-cards-grid .channel-card:nth-child(n+3),
-.group-cards-grid .group-card:nth-child(n+3) {
+.channel-cards-grid .channel-card:nth-child(n + 3),
+.group-cards-grid .group-card:nth-child(n + 3) {
   display: none;
 }
 
 /* В режиме мультивыбора показываем 4 карточки */
-.multi-select .channel-cards-grid .channel-card:nth-child(n+3),
-.multi-select .group-cards-grid .group-card:nth-child(n+3) {
+.multi-select .channel-cards-grid .channel-card:nth-child(n + 3),
+.multi-select .group-cards-grid .group-card:nth-child(n + 3) {
   display: block;
 }
 
-.multi-select .channel-cards-grid .channel-card:nth-child(n+5),
-.multi-select .group-cards-grid .group-card:nth-child(n+5) {
+.multi-select .channel-cards-grid .channel-card:nth-child(n + 5),
+.multi-select .group-cards-grid .group-card:nth-child(n + 5) {
   display: none;
 }
 
@@ -482,7 +482,7 @@ letter-spacing: 0px;
   width: 100%;
   padding: 12px;
   padding-block: 0;
-  background: rgba(255, 255, 255, 1);
+  background: var(--background-tertiary);
   backdrop-filter: blur(4px);
   border: none;
   display: flex;
@@ -494,6 +494,7 @@ letter-spacing: 0px;
   line-height: 20px;
   letter-spacing: 0px;
   z-index: 2;
+  color: var(--text-primary);
 }
 
 .create-card__show-more.active img {
@@ -515,8 +516,10 @@ letter-spacing: 0px;
   border: 2px solid transparent;
   border-radius: 16px;
   padding: 16px;
-  background: rgba(15, 15, 15, 1);
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  background: var(--background-secondary);
+  transition:
+    border-color 0.3s ease,
+    box-shadow 0.3s ease;
   position: relative;
 }
 
@@ -559,7 +562,7 @@ letter-spacing: 0px;
   font-weight: 600;
   font-size: 14px;
   line-height: 18px;
-  color: rgba(255, 255, 255, 1);
+  color: var(--background-tertiary);
   letter-spacing: 0px;
   margin-bottom: 4px;
 }
@@ -569,11 +572,11 @@ letter-spacing: 0px;
   font-size: 11px;
   line-height: 16px;
   letter-spacing: 0px;
-  color: rgba(195, 195, 195, 1);
+  color: var(--text-secondary);
 }
 
 /* В неразвернутом состоянии показываем только 2 первые карточки */
-.group-cards-grid .group-card:nth-child(n+3) {
+.group-cards-grid .group-card:nth-child(n + 3) {
   display: none;
 }
 
@@ -587,7 +590,7 @@ letter-spacing: 0px;
   position: absolute;
   margin-top: 40px;
   right: 0;
-  background: white;
+  background: var(--background-tertiary);
   border-radius: 8px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
   display: none;
@@ -608,7 +611,7 @@ letter-spacing: 0px;
 }
 
 .group-card__dropdown-item--delete {
-  color: #FF3B30;
+  color: #ff3b30;
 }
 
 .create-card:nth-child(2).expanded .group-cards-grid .group-card {
@@ -672,7 +675,7 @@ letter-spacing: 0px;
   top: 100%;
   left: 0;
   right: 0;
-  background: white;
+  background: var(--background-tertiary);
   border-radius: 8px;
   margin-top: 8px;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
@@ -680,7 +683,7 @@ letter-spacing: 0px;
   max-height: 300px;
   overflow-y: auto;
   z-index: 1000;
-  border: 1px solid rgba(225, 226, 235, 1);
+  border: 1px solid var(--border-color);
 }
 
 .search-dropdown.active {
@@ -690,7 +693,7 @@ letter-spacing: 0px;
 .search-item {
   padding: 12px 16px;
   cursor: pointer;
-  color: rgba(0, 0, 0, 0.85);
+  color: var(--text-head);
 }
 
 .search-item:hover {
@@ -699,7 +702,7 @@ letter-spacing: 0px;
 
 .search-item-empty {
   padding: 12px 16px;
-  color: rgba(0, 0, 0, 0.45);
+  color: var(--channel-card);
   text-align: center;
 }
 
@@ -710,14 +713,14 @@ letter-spacing: 0px;
 }
 
 .group-card__members-count {
-font-weight: 500;
-font-size: 8px;
-line-height: 8px;
-letter-spacing: 0px;
-color: rgba(133, 111, 255, 1);
-border-radius: 50%;
-background: rgba(133, 111, 255, 0.2);
-padding: 4px;
+  font-weight: 500;
+  font-size: 8px;
+  line-height: 8px;
+  letter-spacing: 0px;
+  color: rgba(133, 111, 255, 1);
+  border-radius: 50%;
+  background: rgba(133, 111, 255, 0.2);
+  padding: 4px;
 }
 
 .bottom-menu {
@@ -747,7 +750,7 @@ padding: 4px;
   left: 0;
   right: 0;
   bottom: 0;
-  background: #fff;
+  background: var(--background-tertiary);
   border-radius: 16px 16px 0 0;
   padding: 24px;
   transform: translateY(100%);
@@ -774,7 +777,7 @@ padding: 4px;
   padding-bottom: 23px;
   border-bottom: 1px solid rgba(222, 222, 222, 1);
   width: 100%;
-  color: rgba(51, 51, 51, 1);
+  color: var(--background-secondary);
 }
 
 .bottom-menu__list {
@@ -784,7 +787,7 @@ padding: 4px;
   font-size: 17px;
   line-height: 26px;
   letter-spacing: 0.1px;
-  color: rgba(15, 15, 15, 1);
+  color: var(--background-secondary);
   padding-bottom: 12px;
 }
 
@@ -795,6 +798,7 @@ padding: 4px;
   background: none;
   text-align: left;
   font-size: 16px;
+  color: var(--background-secondary);
 }
 
 .bottom-menu__item {
@@ -828,6 +832,7 @@ padding: 4px;
   font-size: 14px;
   line-height: 16.8px;
   letter-spacing: 0.1px;
+  color: var(--background-secondary);
 }
 
 .channel-card.selected {
@@ -874,7 +879,7 @@ padding: 4px;
   font-size: 14px;
   line-height: 16.8px;
   letter-spacing: 0.1px;
-  color: rgba(15, 15, 15, 1);
+  color: var(--background-secondary);
 }
 
 .multi-select-actions .actions-left .action-delete {
@@ -888,7 +893,7 @@ padding: 4px;
   font-size: 14px;
   line-height: 16.8px;
   letter-spacing: 0.1px;
-  color: rgba(15, 15, 15, 1);
+  color: var(--background-secondary);
 }
 
 .multi-select-actions .action-cancel {
@@ -1007,7 +1012,7 @@ padding: 4px;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 0px;
-  color: black;
+  color: var(--text-primary);
 }
 
 .modal.modal-confirm .modal__text {
@@ -1016,7 +1021,7 @@ padding: 4px;
   line-height: 18px;
   letter-spacing: 0px;
   margin-bottom: 8px;
-  color: rgba(0, 0, 0, 0.85);
+  color: var(--text-head);
 }
 
 .modal__header-wrapper {
@@ -1088,8 +1093,8 @@ padding: 4px;
 }
 
 .modal__button--delete {
-  background-color: rgba(15, 15, 15, 1);
-  color: rgba(255, 255, 255, 1);
+  background-color: var(--background-secondary);
+  color: var(--background-tertiary);
 }
 
 /* Стили для модалки добавления в группу */
@@ -1112,7 +1117,7 @@ padding: 4px;
 
 .modal-add-to-group .modal__content {
   width: 100%;
-  background: #fff;
+  background: var(--background-tertiary);
   border-radius: 16px 16px 0 0;
   padding: 16px;
   position: relative;
@@ -1137,7 +1142,7 @@ padding: 4px;
   line-height: 24px;
   letter-spacing: 0px;
   padding: 10px 16px 14px;
-  background: rgba(255, 255, 255, 1);
+  background: var(--background-tertiary);
   border-radius: 16px 0 0 0;
 }
 
@@ -1155,7 +1160,7 @@ padding: 4px;
   font-weight: 600;
   font-size: 14px;
   line-height: 18px;
-  color: rgba(0, 0, 0, 0.85);
+  color: var(--text-head);
   margin-bottom: 8px;
 }
 
@@ -1166,7 +1171,7 @@ padding: 4px;
 }
 
 .modal-add-to-group .modal__channel {
-  background: #F5F5F5;
+  background: #f5f5f5;
   border-radius: 8px;
   padding: 8px 12px;
   font-size: 14px;
@@ -1182,12 +1187,12 @@ padding: 4px;
 .modal-add-to-group .modal__search-input {
   width: 100%;
   padding: 12px;
-  border: 1px solid #E5E5E5;
+  border: 1px solid #e5e5e5;
   border-radius: 8px;
   font-size: 16px;
   box-sizing: border-box;
   line-height: 24px;
-  background: #fff;
+  background: var(--background-tertiary);
   cursor: text;
   transition: border-color 0.2s ease;
 }
@@ -1227,14 +1232,14 @@ padding: 4px;
   top: calc(100% + 8px);
   left: 0;
   width: 100%;
-  background: white;
+  background: var(--background-tertiary);
   border-radius: 8px;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
   display: none;
   max-height: 280px;
   overflow-y: auto;
   z-index: 10;
-  border: 1px solid #E5E5E5;
+  border: 1px solid #e5e5e5;
 }
 
 .modal-add-to-group .modal__search-dropdown.active {
@@ -1254,12 +1259,12 @@ padding: 4px;
 }
 
 .modal-add-to-group .modal__search-item.selected {
-  background: rgba(133, 111, 255, 0.1);
+  background: var(--accent-transparent);
 }
 
 .modal-add-to-group .modal__buttons {
   transition: transform 0.3s ease;
-  background: #fff;
+  background: var(--background-tertiary);
   padding-top: 16px;
   position: relative;
   z-index: 2;
@@ -1305,7 +1310,7 @@ padding: 4px;
   padding-top: 10px;
   padding-bottom: 13px;
   border-radius: 16px 0 0 0;
-  background: rgba(255, 255, 255, 1);
+  background: var(--background-tertiary);
 }
 
 .modal__search-item {
@@ -1334,5 +1339,3 @@ padding: 4px;
   background-position: center;
   margin-left: 8px;
 }
-
-
