--- a/src/css/components/componentCreateGroup.css
+++ b/src/css/components/componentCreateGroup.css
@@ -1,217 +1,215 @@
 .create-group {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 16px;
 }
 
 .create-group__header {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .create-group__title {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 21.6px;
-    letter-spacing: 0px;
-    color: rgba(15, 15, 15, 1);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21.6px;
+  letter-spacing: 0px;
+  color: var(--background-secondary);
 }
 
 .create-group__input {
-    border: 1px solid #E5E5E5;
-    border-radius: 8px;
-    padding: 12px 16px;
-    font-size: 16px;
-    line-height: 24px;
-    padding: 14px 16px;
+  border: 1px solid #e5e5e5;
+  border-radius: 8px;
+  padding: 12px 16px;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 14px 16px;
 }
 
 .create-group__input::placeholder {
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 20px;
-    letter-spacing: 0px;
-    color: rgba(165, 165, 165, 1);
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  letter-spacing: 0px;
+  color: rgba(165, 165, 165, 1);
 }
 
 .create-group__input:focus {
-    border-color: rgba(133, 111, 255, 1);
+  border-color: rgba(133, 111, 255, 1);
 }
 
-
 .create-group__content {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .create-group__content-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .create-group__content-header-title {
-    display: flex;
-    align-items: center;
-    gap: 6px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
 }
 
 .create-group__content-header-title-text {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 21.6px;
-    letter-spacing: 0px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21.6px;
+  letter-spacing: 0px;
 }
 
 .create-group__content-header-title-count {
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 18px;
-    letter-spacing: 0px;
-    color: rgba(169, 169, 169, 1);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 0px;
+  color: rgba(169, 169, 169, 1);
 }
 
 .create-group__content-header-button {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16.8px;
-    letter-spacing: 0.1px;
-    color: rgba(15, 15, 15, 1);    
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16.8px;
+  letter-spacing: 0.1px;
+  color: var(--background-secondary);
 }
 
 .create-group__content-search {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
 }
 
 .create-group__content-search-input {
-    border: 1px solid #E5E5E5;
-    border-radius: 8px;
-    padding: 12px 16px;
-    font-size: 16px;
-    line-height: 24px;
-    padding: 14px 16px;
-    width: 100%;
+  border: 1px solid #e5e5e5;
+  border-radius: 8px;
+  padding: 12px 16px;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 14px 16px;
+  width: 100%;
 }
 
 .create-group__content-search-input::placeholder {
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 20px;
-    letter-spacing: 0px;
-    color: rgba(165, 165, 165, 1);
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  letter-spacing: 0px;
+  color: rgba(165, 165, 165, 1);
 }
 
 .create-group__content-search-input:focus {
-    border-color: rgba(133, 111, 255, 1);
+  border-color: rgba(133, 111, 255, 1);
 }
 
 .create-group__content-search-button {
-    padding: 12px;
-    border-radius: 8px;
-    background-color: rgba(15, 15, 15, 1);
-    min-width: 48px;
-    height: 48px;
+  padding: 12px;
+  border-radius: 8px;
+  background-color: var(--background-secondary);
+  min-width: 48px;
+  height: 48px;
 }
 
 .create-group__content-channels {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 8px;
-    max-height: 406px; /* Высота 6 карточек (2x3 сетка) */
-    overflow-y: auto;
-    padding-right: 8px; /* Для скроллбара */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 8px;
+  max-height: 406px; /* Высота 6 карточек (2x3 сетка) */
+  overflow-y: auto;
+  padding-right: 8px; /* Для скроллбара */
 }
 
 /* Стилизация скроллбара */
 .create-group__content-channels::-webkit-scrollbar {
-    width: 4px;
+  width: 4px;
 }
 
 .create-group__content-channels::-webkit-scrollbar-track {
-    background: #f1f1f1;
-    border-radius: 2px;
+  background: #f1f1f1;
+  border-radius: 2px;
 }
 
 .create-group__content-channels::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 2px;
+  background: #888;
+  border-radius: 2px;
 }
 
 .create-group__content-channels::-webkit-scrollbar-thumb:hover {
-    background: #555;
+  background: #555;
 }
 
 .channel-card {
-    position: relative;
-    cursor: pointer;
+  position: relative;
+  cursor: pointer;
 }
 
 .channel-card__checkbox {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    display: none;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
 
 .channel-card__checkbox img {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .channel-card.selected {
-    border-color: #8571FF;
+  border-color: #8571ff;
 }
 
 .channel-card.selected .channel-card__checkbox {
-    display: flex;
+  display: flex;
 }
 
 .create-group__button:disabled {
-    background: var(--background-primary);
-    color: rgba(165, 165, 165, 1);
-    cursor: not-allowed;
+  background: var(--background-primary);
+  color: rgba(165, 165, 165, 1);
+  cursor: not-allowed;
 
-    & .create-group__button-icon {
-        opacity: 0.2;
-    }
+  & .create-group__button-icon {
+    opacity: 0.2;
+  }
 }
 
 .create-group__button {
-    position: fixed;
-    bottom: 32px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 8px;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 26px;
-    letter-spacing: 0.1px;
-    white-space: nowrap;
-    min-width: 225px;
-    background: #0F0F0F;
-    border-radius: 100px;
-    color: white;
-    display: flex;
-    border: none;
-    cursor: pointer;
-    gap: 16px;
-    align-items: center;
+  position: fixed;
+  bottom: 32px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 8px;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 26px;
+  letter-spacing: 0.1px;
+  white-space: nowrap;
+  min-width: 225px;
+  background: var(--background-secondary);
+  border-radius: 100px;
+  color: var(--background-tertiary);
+  display: flex;
+  border: none;
+  cursor: pointer;
+  gap: 16px;
+  align-items: center;
 }
 
 .create-group__button-icon {
-    background-color: rgba(231, 230, 255, 0.1);
-    border-radius: 50%;
-    padding: 10px;
+  background-color: rgba(231, 230, 255, 0.1);
+  border-radius: 50%;
+  padding: 10px;
 }
-
